<resources>
    <string name="app_name">Individual assignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_custom_prayer">AddCustomPrayerActivity</string>
    <string name="add_prayer">Add your custom prayer here</string>

    <!--    add custom prayer screen-->
    <string name="custom_prayer_name">Name of prayer</string>
    <string name="name">Name</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>

</resources>
